@@ -12,6 +12,7 @@ importFrom(future,resolve)
 importFrom(future,value)
 importFrom(globals,as.Globals)
 importFrom(iterators,iter)
+importFrom(parallel,splitIndices)
 importFrom(utils,capture.output)
 importFrom(utils,object.size)
 importFrom(utils,packageVersion)
